# aclarai_claimify

./: .gitignore  CACHED_REUSE_IMPROVEMENT.md  EXTERNAL_DEPENDENCY_WARNINGS.md  README.md  SCOUT_CONFIG_GUIDE.md  claimify.config.yaml  conftest.py  debug_prompts.py  debug_prompts2.py  mission_config.yaml  pyproject.toml  scout_config.yaml  scout_issues.md  test_input.txt  test_truncation.py  verify_components.py  verify_robots.py
aclarai_claimify/: __init__.py  agents.py  cli.py  config.py  config_integration.py  data_models.py  datascout_mission_selector.py  datascout_tui.py  integration.py  llm_schemas.py  outputs.py  prompt_utils.py  signatures.py
aclarai_claimify/components/: README.md  __init__.py  decomposition.py  disambiguation.py  example.py  selection.py  state.py
aclarai_claimify/embeddings/: base.py  sentence_transformer.py
aclarai_claimify/optimization/: __init__.py  __main__.py  artifacts.py  cli.py  compile.py  components.py  data.py  failure_modes.py  generate.py
aclarai_claimify/optimization/tests/: __init__.py  test_artifacts.py  test_cli.py  test_cli_entry.py  test_compile.py  test_config_load.py  test_generate.py
aclarai_claimify/prompts/: claimify_decomposition.yaml  claimify_disambiguation.yaml  claimify_selection.yaml  disambiguation.json  selection.json
aclarai_claimify/scout/: __init__.py  checkpoint_db.py  config.py  graph.py  litesearch.py  main.py  mission_runner.py  models.py  nodes.py  patch.py  scout_utils.py  state.py  tools.py  utils.py
aclarai_claimify/scout/tui/: agent_output_parser.py  agent_process_manager.py  styles.css
aclarai_claimify/scout/tui/components/: conversation_panel.py  error_modal.py  mission_panel.py  mission_selector.py  progress_panel.py  stats_header.py
aclarai_claimify/settings/: config.yaml  optimization.yaml
aclarai_claimify/utils/: context.py
data-scout-agent/: checkpointer.sqlite  pyproject.toml
data-scout-agent/scout_agent/: graph.py  main.py  nodes.py  state.py  tools.py
docs/: EXTERNAL_DEPENDENCY_WARNINGS.md  disambiguation_decomposition_failure_modes.md
docs/components/: arxiv_wikipedia_tools.md  scout_tools.md  stateless-architecture.md
docs/guides/: data-scout-agent.md
examples/: __init__.py  agent_pipeline_runtime.py  common.py  dspy_runtime.py  gepa.yaml  langgraph_runtime.py  mipro.yaml  stateless_components.py
examples/data/: decomposition_train.jsonl  selection_train.jsonl
examples/data/golden_datasets/: decomposition_train.jsonl  disambiguation_train.jsonl  selection_train.jsonl
optimization_configs/: bootstrap_fewshot.yaml
scripts/: build_artifacts.sh  generate_samples.sh  prospector.py  rerun_prospects.sh  run_scout_step1.sh  verify_prospects.py  verify_robots.py
settings/: mission_config.yaml  scout_mission.yaml
tests/: test_basic_functionality.py  test_component_imports.py  test_components.py  test_conversion_functionality.py
tests/claimify/: test_agents.py  test_context.py  test_data_models.py  test_integration.py  test_pipeline.py  test_scout.py  test_scout_config.py  test_scout_main.py
tests/scout/: test_arxiv_wikipedia_content_tools.py  test_arxiv_wikipedia_tools.py  test_crawler_improvements.py  test_integration.py  test_mission_runner.py  test_nodes.py  test_react_config.py  test_recursion_limit_config.py  test_scout.py  test_search_vs_content.py  test_supervisor_duplicate_issue.py  test_supervisor_fixes.py  test_tool_integration.py  test_tool_truncation.py  test_tools.py
