[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aclarai-claimify"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml",
    "dspy-ai",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
optimization = [
    "dspy-ai>=2.4.0",
    "litellm",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "sentence-transformers",
    "faiss-cpu",
]

[project.scripts]
aclarai-claimify = "aclarai_claimify.cli:main"

[tool.setuptools]
packages = [
    "aclarai_claimify",
    "aclarai_claimify.components",
    "aclarai_claimify.embeddings",
    "aclarai_claimify.optimization",
    "aclarai_claimify.optimization.tests",
    "aclarai_claimify.prompts",
    "aclarai_claimify.settings",
    "aclarai_claimify.utils",
]
[tool.setuptools.package-data]
"aclarai_claimify.settings" = ["*.yaml"]
"aclarai_claimify" = ["../docs/*.md"]
